# hhanalyse

./: .env  batch_process.py  claude-config.json  debug_filter.py  ds_scraper.py  ds_tags_extractor.py  ds_vacancies.csv  eda_profiling.py  export_markdown.py  extract_ds_tags.py  extract_vacancy_ids.py  filter_ds_vacancies.py  filtered_vacancies_20250808_183740.csv  filtered_vacancies_20250808_194941.csv  frontend_vacancies.csv  html_to_markdown.py  interactive_analysis.py  interactive_dashboard.py  interactive_dashboard_ds.py  interactive_dashboard_frontend.py  main.py  notebook.py  priznak.md  pyproject.toml  streamlit_dashboard.py  tags.json  test_api.py  test_filter.py  unique_job_titles.txt  unique_job_titles_filter.txt  vacancies_20250808_164811.csv  vacancies_20250808_181820.csv  vacancies_analysis.py  view_data.py  view_markdown.py  visualization.py
.claude/: config.jsonc  settings.json
.claude/agents/: python-ml-auto-script.md
failed_vacancies/: 123531344.json
markdown_export/: summary.md
src/: extract_technologies_llm.py  fetch_vacancies.py  models.py  notebook.py  storage.py  technology_extractor.py
