[project]
name = "hhscribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pandas",
    "pydantic",
    "python-dotenv",
    "beautifulsoup4",
    "lxml",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "html2text",
    "markdownify",
    "duckdb>=1.3.2",
    "pyarrow>=21.0.0",
    "polars>=1.32.2",
    "openai>=1.0.0",
    "plotly>=5.18.0",
    "ipywidgets>=8.1.0",
    "ydata-profiling>=4.6.0",
    "wordcloud>=1.9.0",
    "kaleido>=0.2.1",
    "panel>=1.3.0",
    "param>=2.0.0",
    "holoviews>=1.18.0",
    "datashader>=0.16.0",
    "dash>=2.16.0",
    "dash-bootstrap-components>=1.5.0",
]
