[project]
name = "hhscribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.3",
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "openai>=1.99.9",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.48.0",
]
